--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#667eea" />
     <title>hellolocal</title>
   </head>
-  <body>
+  <body style="margin: 0 !important; padding: 0 !important;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
