--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#667eea" />
-    <title>hellolocal</title>
+    <title></title>
   </head>
   <body style="margin: 0 !important; padding: 0 !important;">
     <div id="root"></div>
